--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.17.10",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.15",
     "@types/supertest": "^6.0.2",
