--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.1.3"
+    "mongoose": "^8.1.3",
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
